k8s/inventory/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventory-service
  namespace: backend
  labels:
    app: inventory-service
spec:
  type: ClusterIP
  selector:
    app: inventory-service
  ports:
    - name: http
      port: 3000
      targetPort: http
